--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -2532,6 +2532,7 @@
                                             Minimum="0"
                                             Orientation="Vertical"
                                             TickFrequency="7"
+											PreviewMouseUp="F1slider"
                                             Value="500" />-->
 
 
@@ -2550,6 +2551,7 @@
                                             Minimum="0"
                                             Orientation="Vertical"
                                             TickFrequency="7"
+											PreviewMouseUp="F2slider"
                                             Value="500" />-->
 
                                     <!--  H1  -->
@@ -2564,6 +2566,7 @@
                                         Minimum="2"
                                         Orientation="Vertical"
                                         TickFrequency="1"
+										PreviewMouseUp="H1slider"
                                         Value="2" />
 
                                     <!--  H2  -->
@@ -2578,6 +2581,7 @@
                                         Minimum="2"
                                         Orientation="Vertical"
                                         TickFrequency="1"
+										PreviewMouseUp="H2slider"
                                         Value="2" />
 
 
@@ -2594,6 +2598,7 @@
                                         Minimum="2"
                                         Orientation="Vertical"
                                         TickFrequency="1"
+										PreviewMouseUp="H3slider"
                                         Value="2" />
 
                                     <!--  H4  -->
@@ -2609,6 +2614,7 @@
                                         Minimum="2"
                                         Orientation="Vertical"
                                         TickFrequency="1"
+										PreviewMouseUp="H4slider"
                                         Value="2" />
 
                                     <!--  H5  -->
@@ -2624,6 +2630,7 @@
                                         Minimum="2"
                                         Orientation="Vertical"
                                         TickFrequency="1"
+										PreviewMouseUp="H5slider"
                                         Value="2" />
 
                                     <!--  H6  -->
@@ -2639,6 +2646,7 @@
                                         Minimum="2"
                                         Orientation="Vertical"
                                         TickFrequency="1"
+										PreviewMouseUp="H6slider"
                                         Value="2" />
 
 
